# GeodesicModelswithConvexityShapePrior

./: README.md  example_LandMarkPts_ConvexityDB.m  example_Scribbles_ConvexityDB.m
ComputeCircularGeodesicPaths/CircularMinimimalPaths/: CircularConvexityShapedMinimalPaths.m  RunCircularConvexityShapedGeodesicModel.m
ComputeCircularGeodesicPaths/CostConstruction/: ComputePerpImageGradientTensorField_MatlabEigen.m  OrienCostFromImageFeatures.m  OrienCostFromPerpImageGradients_PureEdge.m
ComputeCircularGeodesicPaths/Initialization/: DelineateScribbles.m  DetectEndPointFromRaylineCut.m  FindAdmissableAnkles.m  GenerateInitialConvexityShapedCurve.m  GenerateOriginalPointFromIntervention.m  GenerateRayLinesFromScribbles.m  GenerateScribblesFromLandmarkPoints.m  SampleBoundaryPoints.m  SeekRayLineCut.m  SplitAdaptiveCut.m  TransferTangentToOrientation.m  VisualizeScribbles.m
ComputeCircularGeodesicPaths/TubularNeighbourhood/: ConstructTaggedAdaptiveCutRegion.m  InterfaceHamiltonRawGeometricTube.m  PiecewiseConstantTubePotential.m
MexFiles_SrcFiles/: mexAllHFMFilters.m
MexFiles_SrcFiles/Matlab_ConvertRealPathsToDigitalPaths/: CMakeLists.txt  ConvertRealPathsToDigitalPaths.cxx  ConvertRealPathsToDigitalPaths.h  mexPathTransformation.m
MexFiles_SrcFiles/Matlab_ConvertRealPathsToDigitalPaths/AlgebraDataSturctures/: CMakeLists.txt  arraynd.h  arrayndfloat.h  triplet.h
MexFiles_SrcFiles/Matlab_ConvertRealPathsToDigitalPaths/PathTransformation/: CMakeLists.txt  pathTransformation.cpp  pathTransformation.h  path_Simplified.cpp  path_Simplified.h
MexFiles_SrcFiles/Matlab_ConvexityShapedCurvaturePenalizedMinimalPaths/: HamiltonConvexityShapedCurvaturePenalizedMinimalPaths.cxx  mexHamiltonianConvexityShapedMinimalPaths.m
MexFiles_SrcFiles/Matlab_GeodesicDistanceComputation/: mexHamiltonianDistanceComputation.m
MexFiles_SrcFiles/Matlab_RawGeometricTubularNeighbourhood/: HamiltonRawGeometricTubularNeighbourhood.cxx  mexRawGeometricTubularNeighbourhood.m
Utils/: ConvertRealPathsToDigitalPaths.m  ExtractScribblesFromCololrImages.m  Interpolate2DRealPath.m
(+41 files in other folders)
